k8s/apps/ephermal-notes-api/overlays/prod/deploy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ephermal-notes-api-deploy
spec:
  template:
    spec:
      containers:
        - name: ephermal-notes-api-container
