k8s/apps/ephermal-notes-api/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-ephermal-notes-api
spec:
  hostnames:
    - notes.example.invalid
